Fix workflow trigger to match Lambda event type

--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -2,7 +2,7 @@ name: Deploy Infrastructure Template
 
 on:
   repository_dispatch:
-    types: [deploy-template]
+    types: [infrastructure-deployment]
 
 env:
   AWS_REGION: us-east-1
